--- a/src/API/Vehicles.API/appsettings.Development.json
+++ b/src/API/Vehicles.API/appsettings.Development.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  },
+  "HttpPort": 5020,
+  "HttpsPort": 5021
 }
