--- a/src/API/Vehicles.API/appsettings.json
+++ b/src/API/Vehicles.API/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "host=localhost;port=5433;Database=vehicles;User ID=sa;Password=password@12345#;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HttpPort": 5020,
+  "HttpsPort": 5021
 }
