--- a/src/API/Vehicles.API/appsettings.json
+++ b/src/API/Vehicles.API/appsettings.json
@@ -9,7 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "HttpPort": 5020,
-  "HttpsPort": 5021
+  "AllowedHosts": "*"
 }
