--- a/src/API/Vehicles.API/Dockerfile
+++ b/src/API/Vehicles.API/Dockerfile
@@ -9,7 +9,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
 
 #Add GitHub NuGet sources
-ENV GITHUB_PASSWORD=password
+ARG GITHUB_PASSWORD
 
 WORKDIR /src
 COPY ["src/API/Vehicles.API/Vehicles.API.csproj", "src/API/Vehicles.API/"]
